# depthai-rgb-encoding-example-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs
include/: depthai_wrapper.h
src/: depthai_wrapper.cc  main.rs
